objects/MMPJ_Ext_Vign_Documents_Fournis__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Commentaire__c</fullName>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_debut__c</fullName>
        <label>Date de début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_fin__c</fullName>
        <label>Date de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_telechargement__c</fullName>
        <label>Date de téléchargement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_vers_document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;  MMPJ_Ext_Vign_Livreur__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>MMPJ_Ext_Vign_Societe__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Viticulteur</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Documents fournis</relationshipLabel>
        <relationshipName>Documents_fournis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En_attente</fullName>
                    <label>En attente</label>
                </value>
                <value>
                    <fullName>Téléchargé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendrier de Traitement</fullName>
                </value>
                <value>
                    <fullName>Déclaration de récolte</fullName>
                </value>
                <value>
                    <fullName>Déclaration de fabrication</fullName>
                </value>
                <value>
                    <fullName>RIB</fullName>
                </value>
                <value>
                    <fullName>KBIS</fullName>
                </value>
                <value>
                    <fullName>Récépissé ODG</fullName>
                </value>
                <value>
                    <fullName>Memento fiscal</fullName>
                </value>
                <value>
                    <fullName>Questionnaire de surface</fullName>
                </value>
                <value>
                    <fullName>Analyse vendange</fullName>
                </value>
                <value>
                    <fullName>Brouillon de déclaration de récolte</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document fournis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Statut__c</columns>
        <columns>MMPJ_Ext_Vign_Type__c</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Champagne</group>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Numéro document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents fournis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>